# matryoshka-representation-learning

./: pyproject.toml
src/: dataset.py  engine.py  test.py  train.py
src/MRL/: layer.py  loss.py
